@@ -24,18 +24,18 @@ if {[catch {exec stap -b -o $tmpfile $test} res]} {
 
 if {[catch {eval [list exec $stap_merge_path -o $tmpfile] [glob "${tmpfile}_*"]} res]} {
     puts "merge failed: $res"
-    fail "$TEST_NAME failed"
+    fail $TEST_NAME
     as_root "/bin/rm -f [glob ${tmpfile}*]"
     return
 }
 
 if {[catch {exec cmp $tmpfile $srcdir/$subdir/large_output} res]} {
     puts "$res"
-    fail "$TEST_NAME failed"
+    fail $TEST_NAME
     as_root "/bin/rm -f [glob ${tmpfile}*]"
     return
 }
 
-pass "$TEST_NAME passed"
+pass $TEST_NAME
 as_root "/bin/rm -f [glob ${tmpfile}*]"
 
